<resources>
    <string name="app_name">Bia Glic Monitor</string>
    <string name="BtnAcompanhar">Acompanhar</string>
    <string name="MainBtnAdd">Adicionar Medição</string>
    <string name="MainBtnCompartilhar">Compartilhar</string>
    <string name="MainBtnCadastro">Cadastro</string>
    <string name="MainBtnConfigurar">Configurações</string>
    <string name="AddMedicaoTxtInfo">Informe a Taxa:</string>
    <string name="BtnGravar">Gravar</string>
    <string name="CadastroEdtNome">Informe o Nome ou Apelido</string>
    <string name="CadastroEdtEmail">Informe o seu e-mail</string>
    <string name="CadastroEdtTelefone">Informe o Telefone</string>
    <string name="AddMedicaoEdtTaxa">Informe a Taxa atual</string>
    <string name="CompartilharBtnAddNovo">Selecionar um contato</string>
    <string name="CompartilharTxtInfo">Pessoas com quem compartilho minhas medições:</string>
    <string name="ConfigTxtInfo">Lembrete de Medição:</string>
    <string name="MainBtnAcompanhar">Acompanhar</string>
    <string name="MainBtnMinhasMedicoes">Minhas Medições</string>
    <string name="AcompItemVazio">nenhuma medição informada</string>
    <string name="ConfigTxtMinutos">Minutos</string>
    <string name="AddMedicaoMsgInfoMedicao">Informe a medição</string>
    <string name="ConfigMsgInfoLembrete">Informe o tempo do lembrete em minutos!</string>
    <string name="AddMedicaoMsgMedicaoAdicionada">medição adicionada</string>
    <string name="ConfigMsgConfigGravada">Configurações Gravadas</string>
    <string name="preference_lembrete_key">ConfigLembrete</string>
    <string name="preference_usuario_nome">UsuarioNome</string>
    <string name="preference_usuario_email">UsuarioEmail</string>
    <string name="preference_usuario_telefone">UsuarioTelefone</string>
    <string name="preference_usuario_key">UsuarioKey</string>
    <string name="preference_usuario_id">UsuarioId</string>
</resources>
