<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/CadastroEdtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CadastroEdtNome"/>


    <EditText
        android:id="@+id/CadastroEdtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CadastroEdtEmail"/>

    <EditText
        android:id="@+id/CadastroEdtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CadastroEdtTelefone"/>


    <Button
        android:id="@+id/CadastroBtnGravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BtnGravar"
        />

</LinearLayout>