<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfigTxtInfo"
        android:textSize="30sp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


    <EditText
        android:id="@+id/ConfigEdtLembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/ConfigTxtMinutos"/>

  </LinearLayout>


  <Button
      android:id="@+id/ConfigBtnGravar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/BtnGravar"/>

</LinearLayout>
